# byte-ijson

./: .travis.yml  requirements.txt  setup.cfg  setup.py  tox.ini
byte/formats/: ijson_yajl2_cffi.py
byte/formats/ijson/: __init__.py  python.py  yajl.py  yajl2.py  yajl2_cffi.py
byte/formats/ijson/base/: __init__.py  decoder.py  main.py  tasks.py
src/byte/formats/: ijson_python.py  ijson_yajl.py  ijson_yajl2.py
tests/__fixtures__/collections/: artists.json
tests/base/core/: fixtures.py  helpers.py
tests/base/models/dynamic/: album.py  artist.py  city.py  track.py  user.py
tests/base/models/static/: album.py  artist.py  track.py  user.py
tests/ijson_python/: collection_tests.py  format_tests.py
tests/ijson_yajl/: collection_tests.py  format_tests.py
tests/ijson_yajl2/: collection_tests.py  format_tests.py
tests/ijson_yajl2_cffi/: collection_tests.py  format_tests.py
tests/python/: collection_tests.py
tests/table/: python_tests.py  yajl2_cffi_tests.py  yajl2_tests.py  yajl_tests.py
tests/yajl/: collection_tests.py
tests/yajl2/: collection_tests.py
tests/yajl2_cffi/: collection_tests.py
