[metadata]
name = byte-ijson
author = Dean Gardiner
author-email = me@dgardiner.net
summary = Iterative JSON (ijson) format for the byte data model framework
home-page = https://github.com/fuzeman/byte-ijson
license = MIT
classifier =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries

[pbr]
skip_changelog = true

[files]
packages =
    byte

[bdist_wheel]
universal = 1
